added user registration example

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ universal = 0
 
 [coverage:run]
 include = emailviews/*
-omit = emailviews/tests/*
+omit = emailviews/tests/*,examples/*
 
 [coverage:report]
 fail_under = 100
@@ -11,10 +11,10 @@ exclude_lines =
     pragma: no cover
     def __str__
     raise NotImplementedError
-omit = emailviews/runtests.py,emailviews/tests/*
+omit = emailviews/runtests.py,emailviews/tests/*,examples/*
 
 [flake8]
-exclude = locale,__pycache__,.pyc,templates,tests,runtests.py
+exclude = locale,__pycache__,.pyc,templates,tests,runtests.py,examples
 max-complexity = 10
 
 [isort]
