tox add django [2.0.5, 2.1a1]

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@
 
 [tox]
 envlist =
-    {py34, py35, py36}-django{200,201,202,203,204}
+    {py34, py35, py36, py37}-django{200,201,202,203,204,205}
+    {py35, py36, py37}-django{2.1a1}
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -21,3 +22,5 @@ deps =
     django202: Django==2.0.2
     django203: Django==2.0.3
     django204: Django==2.0.4
+    django205: Django==2.0.5
+    dkamgp2/1a1: Django=2.1a1
