--- a/tox.ini
+++ b/tox.ini
@@ -23,4 +23,4 @@ deps =
     django203: Django==2.0.3
     django204: Django==2.0.4
     django205: Django==2.0.5
-    dkamgp2/1a1: Django=2.1a1
+    django2.1a1: Django==2.1a1
