--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 envlist =
     {py34, py35, py36, py37}-django{200,201,202,203,204,205}
-    {py35, py36, py37}-django{2.1a1}
+;    {py35, py36, py37}-django{2.1a1}
 
 [testenv]
 passenv = CI TRAVIS TRAVIS_*
@@ -23,4 +23,4 @@ deps =
     django203: Django==2.0.3
     django204: Django==2.0.4
     django205: Django==2.0.5
-    django2.1a1: Django==2.1a1
+;    django2.1a1: Django==2.1a1
