remove python 3.4 from supported versions

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-    {py34, py35, py36, py37}-django{200,201,202,203,204,205}
+    {py35, py36, py37}-django{200,201,202,203,204,205}
 ;    {py35, py36, py37}-django{2.1a1}
 
 [testenv]
