add pytest + fix testing

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,9 @@ envlist =
 ;    {py35, py36, py37}-django{2.1a1}
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
+passenv = TOXENV CI TRAVIS TRAVIS_*
 commands =
-    coverage run setup.py test
-    coverage report -m
-    flake8 emailviews
-    codecov
+    pytest -n 3 --cov-report term --cov=emailviews tests/
 deps =
     -rrequirements_tests.txt
     django200: Django==2.0.0
