--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: python
 sudo: false
 python:
-#- "3.7"
 - "3.6"
-- "3.5"
 install:
   - pip install tox-travis
-#  - pip install codecov
+  - pip install --user codecov
 
 script: tox
-
-#after_success:
-#  - codecov
+after_success: codecov
