--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 - "3.6"
 install:
   - pip install tox-travis
-  - pip install --user codecov
+  - pip install codecov
 
 script: tox
 after_success: codecov
