--- a/tox.ini
+++ b/tox.ini
@@ -5,19 +5,12 @@
 
 [tox]
 envlist =
-    {py35, py36, py37}-django{200,201,202,203,204,205}
-;    {py35, py36, py37}-django{2.1a1}
+    {py35, py36, py37}-django20
 
 [testenv]
 passenv = TOXENV CI TRAVIS TRAVIS_*
 commands =
-    pytest -n 3 --cov-report term --cov=emailviews tests/
+    pytest --cov-report term --cov=emailviews tests/
 deps =
     -rrequirements_tests.txt
-    django200: Django==2.0.0
-    django201: Django==2.0.1
-    django202: Django==2.0.2
-    django203: Django==2.0.3
-    django204: Django==2.0.4
-    django205: Django==2.0.5
-;    django2.1a1: Django==2.1a1
+    django20: django>=2.0,<2.1
