--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 sudo: false
 python:
+- "3.7-dev"
 - "3.6"
+- "3.5"
 install:
   - pip install tox-travis
   - pip install codecov
