--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-    {py35, py36, py37}-django20
+    {py35, py36, py37}-django
 
 [testenv]
 passenv = TOXENV CI TRAVIS TRAVIS_*
@@ -13,4 +13,4 @@ commands =
     pytest --cov-report term --cov=emailviews tests/
 deps =
     -rrequirements_tests.txt
-    django20: django>=2.0,<2.1
+    django20: django
